@@ -12,6 +12,9 @@ plugins {
     id 'application'
     id 'java'
 }
+application {
+    applicationDefaultJvmArgs = ['--add-opens java.base/java.io=ALL-UNNAMED']
+}
 
 	mainClassName = 'geek.story.StoryBuilderNotebook'
 	
@@ -23,31 +26,37 @@ dependencies {
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:23.0'
 
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+    // Use JUnit test framework - borked
+    //implementation 'junit:junit:4.13.2'
+    testImplementation(platform('org.junit:junit-bom:5.8.2'))
+	testImplementation('org.junit.jupiter:junit-jupiter')
 	
-	//GSON
-	compile 'com.google.code.gson:gson:2.8.6'
+	//GSON - borked
+	implementation 'com.google.code.gson:gson:2.9.0'
+
+    // google http client - doesnt appear to be used
+	//implementation 'com.google.http-client:google-http-client-gson:1.33.0'
 	
-	compile 'com.google.http-client:google-http-client-gson:1.33.0'
+	//log4j - borked
+	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.1'
+	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.1'
 	
-	//log4j
-	compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.1'
-	compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.1'
-	
-	compile 'org.apache.commons:commons-io:1.3.2'
+    // apache commons io - borked
+	implementation 'org.apache.commons:commons-io:1.3.2'
 }
 
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    google()
+    mavenCentral()
+    //maven{ url "https://mvnrepository.com/artifact/junit/junit"}
 }
 jar {
     manifest {
         attributes(
-            'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+           // 'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
             'Main-Class': 'geek.story.StoryBuilderNotebook'
         )
     }
@@ -70,7 +79,7 @@ task fatJar(type: Jar) {
 
     manifest {
         attributes(
-            'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+           // 'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
             'Main-Class': 'geek.story.StoryBuilderNotebook'
         )
     }
